test: EngineDiscoveryServiceTest가 프로덕션 OFFLINE_THRESHOLD_MS 상수를 직접 참조하도록 수정